--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ section {
     padding-bottom: 16px;
 }
 
-id {
+.cssMain {
     font-size: 40px;
     font-weight: 800;
 }
@@ -35,7 +35,8 @@ nav ul {
 }
 
 body {
-    background-color: #EEEEEE;
+    background-color: #222222;
+    color: #EEEEEE;
 }
 
 .avatar {
